--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,25 @@
+* {
+    font-family: 'Inter', serif;
+}
+
 body {
-    background-color: skyblue;
+    margin: 0;
+}
+
+.header-container {
+    background-color: #fffdf7;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.navigation-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 40%;
+    min-width: 500px;
 }
