--- a/templates/components/header.html.twig
+++ b/templates/components/header.html.twig
@@ -2,9 +2,9 @@
 <div class="header-container">
     <img src="{{ asset('build/images/logo.webp') }}" alt="logo" />
     <nav class="navigation-container">
-        <p>Nos Produits</p>
-        <p>Mon panier</p>
-        <p>Mon compte</p>
-        <p>Déconnexion</p>
+        <a href="/">Nos Produits</a>
+        <a href='/user/1/basket'>Mon panier</a>
+        <a href='/user/1/account'>Mon compte</a>
+        <a>Déconnexion</a>
     </nav>
 </div>
