--- a/templates/product-item.html.twig
+++ b/templates/product-item.html.twig
@@ -1,1 +1,7 @@
-<h1>product item</h1>
+{% extends 'base.html.twig' %}
+
+{% block title %}produit{% endblock %}
+
+{% block body %}
+    <h1>product item</h1>
+{% endblock %}
