--- a/templates/subscribe.html.twig
+++ b/templates/subscribe.html.twig
@@ -1,1 +1,7 @@
-<h1>subscribe</h1>
+{% extends 'base.html.twig' %}
+
+{% block title %}Inscription{% endblock %}
+
+{% block body %}
+    <h1>subscribe</h1>
+{% endblock %}
