--- a/templates/account.html.twig
+++ b/templates/account.html.twig
@@ -1,1 +1,7 @@
-<h1>account</h1>
+{% extends 'base.html.twig' %}
+
+{% block title %}Mon compte{% endblock %}
+
+{% block body %}
+    <h1>account</h1>
+{% endblock %}
