--- a/templates/basket.html.twig
+++ b/templates/basket.html.twig
@@ -1,1 +1,7 @@
-<h1>basket</h1>
+{% extends 'base.html.twig' %}
+
+{% block title %}Panier{% endblock %}
+
+{% block body %}
+    <h1>basket</h1>
+{% endblock %}
