--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -1,1 +1,7 @@
-<h1>login</h1>
+{% extends 'base.html.twig' %}
+
+{% block title %}Connexion{% endblock %}
+
+{% block body %}
+    <h1>login</h1>
+{% endblock %}
