--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
     font-family: 'Inter', serif;
 }
@@ -6,32 +10,105 @@ body {
     margin: 0;
 }
 
-.header-container {
-    background-color: #fffdf7;
+.banner-text-container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 10px;
-    padding-right: 10px;
-}
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 50px;
+    background-color: #e8f0e3;
 
-.navigation-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 40%;
-    min-width: 500px;
-    a {
-     text-decoration: none;
-        color: inherit;
-        cursor: pointer;
+    h1 {
+        font-size: 3.5rem;
+        font-weight: normal;
+    }
+
+    h2 {
+        font-size: 1.5rem;
+        font-weight: 300;
     }
 }
 
-.footer-container {
+.informational-container {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
-    padding-right: 20px;
+    align-items: flex-end;
+    justify-content: space-between;
+
+    img {
+        max-width: 30%;
+    }
+}
+
+.informational-text {
+    width: 40%;
+    max-width: 600px;
+    margin: 50px;
+
+    h2 {
+        font-weight: 400;
+    }
+
+    p {
+        margin: 0;
+        font-weight: 200;
+    }
+}
+
+.conviction-container {
+    flex-direction: row-reverse;
+    background-color: #ebe3d3;
+}
+
+.values-container {
+    background-color: #e8f0e3;
+}
+
+.product-item-btn-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.product-item-btn {
+    width: 100%;
+    max-width: 400px;
+    height: 50px;
+    background-color: #565656;
+    color: #ffffff;
+    border: none;
+}
+
+@media only screen and (max-width: 768px) {
+
+    .informational-container {
+        flex-direction: column;
+        align-items: center;
+
+        img {
+            width: 100%;
+            max-width: 100%;
+            height: 400px;
+            object-fit: cover;
+        }
+    }
+
+    .informational-text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .product-item-btn-container {
+        margin-top: 100px;
+    }
+
+    .product-item-content {
+        margin-top: 20px;
+        margin-bottom: 0px;
+        margin-left: 0px;
+    }
+
 }
