feature: add jwt + start login page

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -107,8 +107,7 @@ body {
 
     .product-item-content {
         margin-top: 20px;
-        margin-bottom: 0px;
-        margin-left: 0px;
+        margin-bottom: 0;
+        margin-left: 0;
     }
-
 }
