--- a/templates/components/hero-banner.html.twig
+++ b/templates/components/hero-banner.html.twig
@@ -1,8 +1,8 @@
 
 <div class="flex flex-col-reverse  lg:flex-row">
     <div class="banner-text-container">
-        <h1>Bienvenue</h1>
-        <h2>
+        <h1 class="mb-5">Bienvenue</h1>
+        <h2  class="mb-5">
             Découvrez notre univers de produits durables et éthiques pour une consommation responsable
         </h2>
         <h2>
