--- a/templates/components/product-list.html.twig
+++ b/templates/components/product-list.html.twig
@@ -3,12 +3,12 @@
 
         <div class="flex flex-col md:flex-row flex-wrap items-center justify-center">
                 {% for product in products %}
-                    <div class="flex flex-col items-center w-full md:w-[50%] xl:w-[33%] min-w-[300px]">
+                    <div class="flex flex-col items-center w-full md:w-2/4 xl:w-1/3 min-w-72">
                             <a href="/product/{{ product.id }}">
                                 <img class="w-full object-cover" src="{{ product.picture }}" alt="{{ product.name }}">
                             </a>
-                            <h3 class="mt-10 mb-5">{{ product.name }}</h3>
-                            <p class="opacity-70 mb-8">{{ product.shortDescription }}</p>
+                            <h3 class="font-semibold text-lg mt-10 mb-5">{{ product.name }}</h3>
+                            <p class="opacity-70 mb-5">{{ product.shortDescription }}</p>
                             <p>{{ product.price }}€</p>
                             <a class="my-10" href="/product/{{ product.id }}">Voir le produit</a>
                         </div>
