--- a/templates/components/values.html.twig
+++ b/templates/components/values.html.twig
@@ -1,12 +1,12 @@
 <div class="informational-container values-container">
     <img src="{{ asset('build/images/values.webp') }}" alt="flower"/>
     <div class="informational-text">
-        <h2>NOS VALEURS</h2>
-        <p>Durabilité : Nous sélectionnons soigneusement des produits qui respectent l'environnement et favorisent la
+        <h2 class="text-3xl mb-5">NOS VALEURS</h2>
+        <p class="text-lg">Durabilité : Nous sélectionnons soigneusement des produits qui respectent l'environnement et favorisent la
             durabilité.</p>
-        <p>Éthique : Nous nous engageons à travailler avec des partenaires et des fournisseurs qui partagent nos valeurs
+        <p class="text-lg">Éthique : Nous nous engageons à travailler avec des partenaires et des fournisseurs qui partagent nos valeurs
             éthiques.</p>
-        <p>Écologie : Nous encourageons des pratiques respectueuses de l'écosystème et privilégions les matériaux
+        <p class="text-lg">Écologie : Nous encourageons des pratiques respectueuses de l'écosystème et privilégions les matériaux
             écologiques.</p>
     </div>
 </div>
