--- a/templates/product-item.html.twig
+++ b/templates/product-item.html.twig
@@ -13,7 +13,7 @@
                 <p class="product-item-description">{{ product.fullDescription }}</p>
             </div>
             <div class="product-item-btn-container">
-                <button class="product-item-btn">Ajouter au panier</button>
+                <button class="custom-btn">Ajouter au panier</button>
             </div>
         </div>
     </div>
