--- a/templates/basket.html.twig
+++ b/templates/basket.html.twig
@@ -3,5 +3,42 @@
 {% block title %}Panier{% endblock %}
 
 {% block body %}
-    <h1>basket</h1>
+    <div class="custom-background flex flex-col items-center">
+        <h1 class="text-xl my-10">Mon panier</h1>
+        {% if basket is empty %}
+            <div class="h-lvh flex flex-col items-center justify-center">
+                <p class="text-3xl">Votre panier est vide.</p>
+            </div>
+        {% else %}
+
+            <div class="w-full md:w-8/12 md:max-w-[766px] mb-5 opacity-70">
+                <form action="{{ path('clear_basket') }}" method="POST">
+                    <button>X Vider le panier</button>
+                </form>
+
+            </div>
+
+
+            {% for productId, item in basket %}
+                <a href="/product/{{ productId }}"
+                   class="w-full md:w-8/12 md:max-w-[766px] bg-white flex flex-row justify-center p-10 mb-2">
+                    <img src="{{ item.picture }}" alt="{{ item.name }}" class="w-32 h-32 object-contain">
+                    <div class="ml-10 w-3/6 flex flex-col justify-center">
+                        <p class="font-semibold">{{ item.name }}</p>
+                        <p class="opacity-70">Quantité: {{ item.quantity }}</p>
+                        <p class="text-lg mt-2">{{ item.price }}€</p>
+                    </div>
+                </a>
+            {% endfor %}
+
+            <div class="w-full md:w-8/12 md:max-w-[766px] bg-white mt-2 mb-5 p-10 flex flex-col justify-end items-end">
+                <p>Total panier : {{ totalPrice }}€</p>
+                <p class="opacity-70">Frais de livraison: Offert</p>
+            </div>
+
+            <form class="w-full flex justify-center" action="{{ path('confirm_command') }}" method="POST">
+                <button class="custom-btn my-10 mb-36">Valider la commande</button>
+            </form>
+        {% endif %}
+    </div>
 {% endblock %}
