--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
-    <div class="flex flex-col md:flex-row justify-between w-full">
+    <div class="flex flex-col md:flex-row justify-between w-full custom-background">
         <img class="w-full max-h-64 md:w-3/6 md:max-h-[800px] object-cover" src="{{ asset('build/images/conviction.webp') }}" alt="flower"/>
         <div class=" w-full flex flex-col justify-start items-center pt-5 md:pt-20">
             <div class="w-8/12 flex flex-col justify-between items-stretch">
@@ -19,11 +19,11 @@
                 {{ form_start(loginForm) }}
                 <div class="flex flex-col justify-between items-stretch w-full mt-10">
                     {{ form_label(loginForm.email, null, {'label_attr': {'class': 'text-slate-700'}}) }}
-                    {{ form_widget(loginForm.email, {'attr': {'class': 'border border-slate-600 h-16 text-3xl mt-5'}}) }}
+                    {{ form_widget(loginForm.email, {'attr': {'class': 'border border-slate-600 h-16 text-3xl mt-5 custom-background-form'}}) }}
                 </div>
                 <div class="flex flex-col justify-between items-stretch mt-10">
                     {{ form_label(loginForm.password, null, {'label_attr': {'class': 'text-slate-700'}}) }}
-                    {{ form_widget(loginForm.password, {'attr': {'class': 'border border-slate-600 h-16 text-3xl mt-5'}}) }}
+                    {{ form_widget(loginForm.password, {'attr': {'class': 'border border-slate-600 h-16 text-3xl mt-5 custom-background-form'}}) }}
                 </div>
                 <div class="w-full mt-10 ">
                     {{ form_widget(loginForm.submit, {'attr': {'class': 'text-white w-full bg-gray-600 h-16 text-lg'}}) }}
