feature: finish route api

--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -2,6 +2,11 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Page non trouvée</h1>
-    <p>La page que vous recherchez n'existe pas. Vérifiez l'URL ou <a href="{{ path('homepage') }}">retournez à la page d'accueil</a>.</p>
+    <div class="flex flex-col justify-center items-center h-screen">
+
+
+        <h1 class="text-5xl font-bold mb-20 text-emerald-800">Page non trouvée</h1>
+        <p>La page que vous recherchez n'existe pas. Vérifiez l'URL ou <a class="text-blue-800" href="{{ path('app_home') }}">retournez à la
+                page d'accueil</a>.</p>
+    </div>
 {% endblock %}
